[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "daily-schedule-agent"
version = "0.1.0"
description = "A local daily planning agent powered by DeepSeek"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Your Name" }
]
license = { text = "MIT" }
keywords = ["agent", "schedule", "deepseek", "planner"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent"
]

[project.scripts]
schedule-agent = "scheduler_agent:main"

[tool.setuptools]
py-modules = ["scheduler_agent"]
